@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/py-rrdtool
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/py-rrdtool/Attic/ChangeLog,v 1.14 2006/12/16 11:17:15 cedk Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/py-rrdtool/Attic/ChangeLog,v 1.15 2007/11/24 09:47:35 drac Exp $
+
+  24 Nov 2007; Samuli Suominen <drac@gentoo.org>
+  py-rrdtool-1.0_beta1.ebuild:
+  Keyword ~amd64 wrt #200153.
 
   16 Dec 2006; Cedric Krier <cedk@gentoo.org> -py-rrdtool-0.2.1.ebuild:
   Remove old version
